added link to phone number

--- a/_layouts/teammembers.html
+++ b/_layouts/teammembers.html
@@ -16,7 +16,7 @@ menu: menu-active
           <img src="{{page.photo_url}}" alt="" />
           <div class="card-content">
             <p class="card-title">{{page.card_title}}</p>
-            <p class="card-phone-number"><i class="fa-solid fa-phone"></i> {{page.phonenumber}}</p>
+            <p class="card-phone-number"><i class="fa-solid fa-phone"></i><a class="underline" href="tel:{{page.phonenumber}}">{{page.phonenumber}}</a> </p>
             <p><i class="fa-solid fa-envelope"></i><a class="underline" href="mailto: {{page.email}}"> {{page.email}}</a> </a></p>
             <p class="card-title">{{page.soundbites}}</p>
             <p>{{page.soundbites_text}}</p>
