updated privacy policy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,7 +70,7 @@
     Ontwerp: <a class="underline" href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
     <a href="https://www.daanboertien.com" class="underline">Daan Boertien</a>
   </p>
-  <p class="disclaimer fs-12px">©{{"now" | date: "%Y"}} All Rights Reserved | Disclaimer | Cookie Policy | Privacy</p>
+  <p class="disclaimer fs-12px">©{{"now" | date: "%Y"}} All Rights Reserved | Cookie Policy | <a href="/assets/docs/Privacy_Policy_Website.pdf" class="underline">Privacy</a></p>
   <div class="green-space"></div>
   
   
