--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -68,9 +68,9 @@
   
   <p class="ontwerp fs-12px">
     Ontwerp: <a class="underline" href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
-    <a href="https://www.daanboertien.com" class="underline">Daan Boertien</a>
+    <a href="https://www.daanboertien.com" class="underline" target="_blank">Daan Boertien</a>
   </p>
-  <p class="disclaimer fs-12px">©{{"now" | date: "%Y"}} All Rights Reserved | Cookie Policy | <a href="/assets/docs/Privacy_Policy_Website.pdf" class="underline">Privacy</a></p>
+  <p class="disclaimer fs-12px">©{{"now" | date: "%Y"}} All Rights Reserved | Cookie Policy | <a href="/assets/docs/Privacy_Policy_Website.pdf" class="underline" target="_blank">Privacy</a></p>
   <div class="green-space"></div>
   
   
