--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
       <a class="mainlogolink" href="/">
         <img
           class="mainlogo"
-          src="/assets/images/upload/logo-human-connection.svg"
+          src="/assets/images/upload/HCLOGORGB_NL_25 JAAR.png"
           alt=""
         />
       </a>
