--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
       <a class="mainlogolink" href="/">
         <img
           class="mainlogo"
-          src="/assets/images/upload/HCLOGORGB_NL_25 JAAR.png"
+          src="/assets/images/upload/logo-human-connection.svg"
           alt=""
         />
       </a>
@@ -46,6 +46,7 @@
               <li><a href="{{site.data.nav.hoe-wij-werken}}" class="dropdown-link">Hoe wij werken</a></li>
               <li><a href="{{site.data.nav.wat-wij-doen}}" class="dropdown-link">Wat wij doen</a></li>
               <li><a href="{{site.data.nav.connect-to-perform}}" class="dropdown-link">Connect to Perform</a></li>
+              <li><a href="{{site.data.nav.vertrouwenspersoon}}" class="dropdown-link">Vertrouwenspersoon</a></li>
             </ul>
           </li>
           <li class="main-menu-list">
