--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -78,6 +78,7 @@
               <li><a href="{{site.data.nav.hoe-wij-werken}}">Hoe wij werken</a></li>
               <li><a href="{{site.data.nav.wat-wij-doen}}">Wat wij doen</a></li>
               <li><a href="{{site.data.nav.connect-to-perform}}">Connect to Perform</a></li>
+              <li><a href="{{site.data.nav.vertrouwenspersoon}}">Vertrouwenspersoon</a></li>
             </ul>
           </li>
           <li class="submenu-mobile-toggle3 li-outer">
